fixed some layout issues

--- a/client/src/views/Book/Book.css
+++ b/client/src/views/Book/Book.css
@@ -1,21 +1,6 @@
-/* .Book {
-    background-image: url(https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?cs=srgb&dl=pink-clouds-1831234.jpg&fm=jpg);
-    height:100%;
-}
-
-
-
-.window {
-    margin-top: 64
-} */
-
 .content {
     padding: 150px;
     position: relative;
+    width: 850px;
     height: 100%;
-}
-
-.title {
-    font-family: "Pacifico, sans-serif";
-    display: inline-block;
 }
